--- a/Makefile.am
+++ b/Makefile.am
@@ -1,73 +1,35 @@
-################################################################################
-# CONFIGURABLE PART
-################################################################################
+SRC_DIR = src
+LIB_DIR = lib
+BIN_DIR = bin
+OBJ_DIR = classes
 
-JARFILE = salt.jar
-SRCDIR = src
-LIBDIR = lib
-CLASSESDIR = classes
-BINFILES = salt $(JARFILE)
-JAVAC_FLAGS = -g -w
+dist_pkgdata_DATA = @PACKAGE@.jar $(shell find $(srcdir)/$(LIB_DIR) -type f -iname '*.jar') 
+dist_java_JAVA = $(shell find $(srcdir)/$(SRC_DIR) -type f -iname '*.java')
+javadir = $(datadir)/java
+JAVAROOT = $(OBJ_DIR)
+CLASSPATH = $(shell find $(srcdir)/$(LIB_DIR) -name '*.jar' -printf '%p:')
+CLASSPATH_ENV = export CLASSPATH=$(shell find $(srcdir)/$(LIB_DIR) -name '*.jar' -printf '%p:');
+AM_JAVACFLAGS = -sourcepath $(srcdir)/$(SRC_DIR) -Xlint:unchecked -Xlint:deprecation
+EXTRA_DIST = $(LIB_DIR) $(BIN_DIR)/@PACKAGE@.in
+EXTRA_SCRIPTS = $(BIN_DIR)
+CLEANFILES =  @PACKAGE@ @PACKAGE@.jar
 
-################################################################################
-# NON-CONFIGURABLE PART
-################################################################################
+$(shell mkdir -p $(OBJ_DIR))
 
-# Automake `primary' says to compile *.java files and put results in `classesdir'
-javadir = $(top_builddir)/$(CLASSESDIR)
-JAVAROOT = $(javadir)
-dist_java_JAVA = $(shell find $(SRCDIR) -name '*.java') src/TParser.java src/TLexer.java
+@PACKAGE@.jar: classjava.stamp $(shell find $(srcdir)/$(SRC_DIR) -type f ! -iname '*.java')
+	cd $(srcdir)/$(SRC_DIR) ; find . -type f ! -iname '*.java' -exec cp --parents -u {} ../$(OBJ_DIR) \;
+	touch $@
+	@JAR@ -uf $@ -C $(OBJ_DIR) .
 
-# Debug flags, no warnings, for javac and gcj
-AM_JAVACFLAGS = $(JAVAC_FLAGS)
-
-# Automake variable with supplemental items to clean
-CLEANFILES = *.class $(JARFILE) salt src/TParser.java src/TLexer.java src/T.tokens
-
-# Automake variables needed by java and javac
-JARS = $(shell find $(LIBDIR) -name '*.jar' -printf '%p:')
-CLASSPATH = "$(shell $(CYGPATH_PW) $(JARS)$(top_builddir)/$(CLASSESDIR))"
-CLASSPATH_ENV = export CLASSPATH=$(CLASSPATH);
-
-# Automake `primary' says to put these `scripts' into the ../bin directory
-dist_bin_SCRIPTS = $(BINFILES)
-
-# We need this for substitution in sed commands
-saltdir := $(pkgdatadir)
-
-src/TParser.java: T.g
-	@JAVA@ -cp $(CLASSPATH) org.antlr.Tool -o src $<
-
-src/TLexer.java: T.g
-	@JAVA@ -cp $(CLASSPATH) org.antlr.Tool -o src $<
-
-src/T.tokens: T.g
-	@JAVA@ -cp $(CLASSPATH) org.antlr.Tool -o src $<
-
-# Build the main jar file.
-$(JARFILE): classdist_java.stamp $(dist_data_DATA)
-	if ! test -d scratch ; then \
-	  mkdir scratch ; \
-	  cd scratch ; \
-	  find ../lib/*.jar -exec jar -xf {} \; ; \
-	  find . -iname manifest.mf -exec rm {} + ; fi
-	if ! test -f $(JARFILE) ; then \
-	  touch $(JARFILE) ; \
-	  touch ./scratch/ZIPCREATED ; \
-	  @JAR@ -uf $(JARFILE) -C ./scratch . ; fi
-	@JAR@ -uf $(JARFILE) -C $(javadir) .
-
-salt: salt.in
-	sed 's|PKGDATADIR|$(pkgdatadir)|' salt.in > salt
-
-# Supplemental cleaning rule
 clean-local:
-	rm -rf scratch
-	rm -rf $(javadir)
+	rm -rf $(OBJ_DIR)
 
-install-data-local:
-	mkdir -p $(pkgdatadir)
-	cp -rf $(srcdir)/templates $(pkgdatadir)
-
-# Phony targets have no dependencies.
-.PHONY: distclean-local clean-local all
+# check: @PACKAGE@.jar
+# 	@@JAVA@ -cp $(CLASSPATH):@PACKAGE@.jar org.junit.runner.JUnitCore \
+# 	org.pjdbc.tests.CatDriverTest \
+# 	org.pjdbc.tests.DriverCompositionTest \
+# 	org.pjdbc.tests.FilteringDriverTest \
+# 	org.pjdbc.tests.LoggingDriverTest \
+# 	org.pjdbc.tests.PoolingDriverTest \
+# 	org.pjdbc.tests.SinkDriverTest \
+# 	org.pjdbc.tests.TeeDriverTest
