--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
   <build>
     <plugins>
       <plugin>
+      	<groupId>org.ensime.maven.plugins</groupId>
+      	<artifactId>ensime-maven</artifactId>
+      	<version>1.2.0</version>
+      </plugin>
+      <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-install-plugin</artifactId>
 	<version>2.5.2</version>
