--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,4 +9,5 @@ pipelines:
   default:
     - step:
         script: # Modify the commands below to build your repository.
+	  - apt-get update && apt-get install -y maven
           - mvn compile
