OK, running initialize

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,4 +3,4 @@ pipelines:
   default:
     - step:
         script:
-          - mvn -B verify    # -B batch mode makes Maven less verbose
+          - mvn -B initialize verify    # -B batch mode makes Maven less verbose
