--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <olingo.version>4.4.0</olingo.version>
   </properties>
 
   <build>
@@ -104,7 +105,6 @@
         <configuration>
       	  <source>1.8</source>
       	  <target>1.8</target>
-      	  <!-- <compilerArgument>-Xlint:unchecked</compilerArgument> -->
         </configuration>
       </plugin>
       <plugin>
@@ -122,27 +122,45 @@
     </plugins>
   </build>
 
-  <!-- <reporting> -->
-  <!--   <plugins> -->
-  <!--     <plugin> -->
-  <!-- 	<groupId>org.apache.maven.plugins</groupId> -->
-  <!-- 	<artifactId>maven-javadoc-plugin</artifactId> -->
-  <!-- 	<version>3.0.0</version> -->
-  <!--     </plugin> -->
-  <!--   </plugins> -->
-  <!-- </reporting> -->
-
   <dependencies>
+    <dependency>
+      <groupId>org.apache.olingo</groupId>
+      <artifactId>odata-commons-api</artifactId>
+      <version>${olingo.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.olingo</groupId>
+      <artifactId>odata-commons-core</artifactId>
+      <version>${olingo.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.olingo</groupId>
+      <artifactId>odata-server-api</artifactId>
+      <version>${olingo.version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.olingo</groupId>
+      <artifactId>odata-server-core</artifactId>
+      <version>${olingo.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.olingo</groupId>
+      <artifactId>odata-server-api</artifactId>
+      <version>${olingo.version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.olingo</groupId>
+      <artifactId>odata-server-core</artifactId>
+      <version>${olingo.version}</version>
+      <scope>runtime</scope>
+    </dependency>
     <dependency>
       <groupId>org.protonchamber</groupId>
       <artifactId>apg</artifactId>
       <version>1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
