--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,4 +26,10 @@
     <res-auth>Container</res-auth>
   </resource-ref>
 
+  <resource-ref>
+    <res-ref-name>jdbc/ProtonDB</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
+
 </web-app>
