--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     <load-on-startup>1</load-on-startup>
     <init-param>
       <param-name>dsname</param-name>
-      <param-value>jdbc/ProtonDB</param-value>
+      <param-value>jdbc/StudyBlue2</param-value>
     </init-param>
   </servlet>
 
@@ -21,13 +21,19 @@
   </servlet-mapping>
 
   <resource-ref>
-    <res-ref-name>jdbc/ProtonDB2</res-ref-name>
+    <res-ref-name>jdbc/StudyBlue</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
 
   <resource-ref>
     <res-ref-name>jdbc/ProtonDB</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
+
+  <resource-ref>
+    <res-ref-name>jdbc/StudyBlue2</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
