--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,10 +9,9 @@
     <servlet-name>ProtonServlet</servlet-name>
     <servlet-class>org.protonchamber.ProtonServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
-    <init-param>
-      <param-name>dsname</param-name>
-      <param-value>jdbc/StudyBlue2</param-value>
-    </init-param>
+    <init-param><param-name>dsname</param-name><param-value>jdbc/ProtonDB</param-value></init-param>
+    <init-param><param-name>CATALOG</param-name><param-value>dventimi</param-value></init-param>
+    <init-param><param-name>SCHEMA_PATTERN</param-name><param-value>public</param-value></init-param>
   </servlet>
 
   <servlet-mapping>
