--- a/pom.xml
+++ b/pom.xml
@@ -18,35 +18,89 @@
   <build>
     <plugins>
       <plugin>
+	<groupId>org.codehaus.mojo</groupId>
+	<artifactId>versions-maven-plugin</artifactId>
+	<version>2.5</version>
+	<configuration>
+          <generateBackupPoms>false</generateBackupPoms>
+	</configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.0.0-M1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
 	<groupId>org.apache.tomcat.maven</groupId>
 	<artifactId>tomcat7-maven-plugin</artifactId>
 	<version>2.2</version>
 	<executions>
-	  <execution>
-	    <goals>
-	      <goal>redeploy</goal>
-	    </goals>
-	    <phase>install</phase>
-	  </execution>
+          <execution>
+            <id>start-tomcat</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>run-war</goal>
+            </goals>
+            <configuration>
+              <fork>true</fork>
+	      <port>9080</port>
+            </configuration>
+          </execution>
+          <execution>
+            <id>stop-tomcat</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>shutdown</goal>
+            </goals>
+          </execution>
+	  <!-- <execution> -->
+	  <!--   <goals> -->
+	  <!--     <goal>redeploy</goal> -->
+	  <!--   </goals> -->
+	  <!--   <phase>install</phase> -->
+	  <!-- </execution> -->
 	</executions>
-	<configuration>
-          <url>http://localhost:8080/manager/text</url>
-          <server>TomcatServer</server>
-          <path>/ProtonChamber</path>
-	</configuration>
+	<!-- <configuration> -->
+        <!--   <url>http://localhost:8080/manager/text</url> -->
+        <!--   <server>TomcatServer</server> -->
+        <!--   <path>/ProtonChamber</path> -->
+	<!-- </configuration> -->
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.0</version>
+        <version>3.8.0</version>
         <configuration>
-      	  <source>1.8</source>
-      	  <target>1.8</target>
+	  <release>11</release>
         </configuration>
       </plugin>
     </plugins>
   </build>
 
   <dependencies>
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.1-901-1.jdbc4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.3.1</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.antlr</groupId>
       <artifactId>ST4</artifactId>
@@ -56,6 +110,7 @@
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.olingo</groupId>
