--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>ProtonChamber</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>war</packaging>
-  <name>Protonchamber</name>
+  <name>ProtonChamber</name>
   <url>http://www.protonchamber.org</url>
 
   <properties>
@@ -26,9 +26,50 @@
 	</configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M1</version>
+	<groupId>io.fabric8</groupId>
+	<artifactId>docker-maven-plugin</artifactId>
+	<version>0.27.1</version>
+	<configuration>
+	  <images>
+	    <image>
+	      <name>postgres:11</name>
+	      <run>
+		<wait>
+		  <log>database system is ready to accept connections</log>
+		  <time>20000</time>
+		</wait>
+		<log>
+		  <prefix>DB</prefix>
+		  <color></color>
+		</log>
+		<env>
+		  <POSTGRES_DB>atomic</POSTGRES_DB>
+		  <POSTGRES_USER>atomic</POSTGRES_USER>
+		  <POSTGRES_PASSWORD>atomic</POSTGRES_PASSWORD>
+		</env>
+		<ports>
+		  <port>7432:5432</port>
+		</ports>
+	      </run>
+	    </image>
+	  </images>
+	</configuration>
+	<executions>
+	  <execution>
+	    <id>start</id>
+	    <phase>pre-integration-test</phase>
+	    <goals>
+	      <goal>start</goal>
+	    </goals>
+	  </execution>
+	  <execution>
+	    <id>stop</id>
+	    <phase>post-integration-test</phase>
+	    <goals>
+	      <goal>stop</goal>
+	    </goals>
+	  </execution>
+	</executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -66,18 +107,7 @@
               <goal>shutdown</goal>
             </goals>
           </execution>
-	  <!-- <execution> -->
-	  <!--   <goals> -->
-	  <!--     <goal>redeploy</goal> -->
-	  <!--   </goals> -->
-	  <!--   <phase>install</phase> -->
-	  <!-- </execution> -->
 	</executions>
-	<!-- <configuration> -->
-        <!--   <url>http://localhost:8080/manager/text</url> -->
-        <!--   <server>TomcatServer</server> -->
-        <!--   <path>/ProtonChamber</path> -->
-	<!-- </configuration> -->
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -91,10 +121,16 @@
 
   <dependencies>
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>9.1-901-1.jdbc4</version>
+      <version>42.2.5</version>
     </dependency>
+    <!-- <dependency> -->
+    <!--   <groupId>junit</groupId> -->
+    <!--   <artifactId>junit</artifactId> -->
+    <!--   <version>4.12</version> -->
+    <!--   <scope>test</scope> -->
+    <!-- </dependency> -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
