--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
             <configuration>
               <fork>true</fork>
 	      <port>9080</port>
-	      <contextFile>context.xml</contextFile>
+	      <contextFile>context-integration.xml</contextFile>
             </configuration>
           </execution>
           <execution>
