--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,6 +2,7 @@ image: maven:3.6.0-jdk-11-slim
 pipelines:
   default:
     - step:
+        name: default
         caches:
           - maven
         script:
